--- a/game/package.json
+++ b/game/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pug src/pug/index.pug -o dist"
+    "dev": "pug src/pug/index.pug -o dist && sass ./src/scss/index.scss ./dist/style.css && cp src/js/*.js ./dist/"
   },
   "keywords": [],
   "author": "",
